# The_ray_tracer_challenge

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RaceTracer  RaceTracer.cbp  cmake_install.cmake  main.cpp
Canvas/: Canvas.cpp  Canvas.h
Color/: Color.cpp  Color.h
Intersection/: Intersection.cpp  Intersection.h
Light/: Light.cpp  Light.h
Material/: Material.cpp  Material.h
Matrix/: Matrix.cpp  Matrix.h  MatrixTransform.cpp
Ozone/: RaceTracer.jdebug
Point/: Point.cpp  Point.h
Ray/: Ray.cpp  Ray.h
Sphere/: Sphere.cpp  Sphere.h
Test/: Test.cpp  Test2.cpp
Tuple/: Tuple.cpp  Tuple.h
Vector/: Vector.cpp  Vector.h
lib/googletest/: googletest-distribution.cbp
lib/googletest/googlemock/: gmock.cbp
lib/googletest/googlemock/docs/: cook_book.md  for_dummies.md  pump_manual.md
lib/googletest/googletest/: gtest.cbp
lib/googletest/googletest/docs/: advanced.md  pkgconfig.md
lib/googletest/googletest/include/gtest/internal/: gtest-param-util.h
lib/googletest/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
